EKS/Video_56/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    app: nginx-deployment-alb
  name: nginx-deployment-alb
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: nginx-deployment-alb
  template:
    metadata:
      labels:
        app: nginx-deployment-alb
    spec:
      containers:
      - name: nginx
        image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-alb
spec:
  # Necesitamos un puerto expuesto al exterior del cluster, el balanceador tendra acceso
  type: NodePort 
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deployment-alb
